# strm-tests

./: .gitignore  Makefile  README.md  generate_quiz.py  generate_tests.py  pyproject.toml  requirements.txt  strm_tests_webviewer.py
config/: quiz.conf  quiz2.conf  quiz3.conf  quiz4.conf  quiz5.conf  quiz6.conf  quiz6.toml
docs/: Contribution.md  api.md
latex/: correction-s2.tex  document.tex  test-n2.tex  test-n°2.tex  test.tex
src/: __main__.py  get-correction.py
strm-test/: bool_const.py  boolquiz.py  generate_tests.py  logigram.py  mqg_gift.py  question.py  test_builder.py  test_factory.py  test_format.py  test_format_factory.py  test_format_tex.py
strm_test/: bool_const.py  boolquiz.py  chronograms.py  generate_tests.py  get-correction.py  ieee754.py  logigram.py  minterm.py  moodlegen.py  moodlequestiongenerator.py  question.py  question_builder.py  read_config.py  svg_chronograms.py  test_builder.py  test_factory.py  test_format.py  test_format_factory.py  test_format_tex.py  tex_chronograms.py
strmquiz/: __main__.py  argschemaloader.py  boolean_question_builder.py  encoding_question_builder.py  generate_tests.py  question_builder.py  question_builder_factory.py  quiz_builder.py  quiz_factory.py  quizbuilder.py  read_config.py  sequential_question_builder.py  test_factory.py
tests/: genarte_maxterm.py  genmoodle.py  join_asynchron.py  test_countersimulator.py  test_quiz_builder.py  test_registersimulator.py  test_requirements.txt  test_seqcircuitsimulator.py  test_test_builder.py  test_unit_boolean_question_builder.py  test_unit_boolquiz.py  test_unit_codage_ieee754.py  (+15 more)
web/: app.py  (+3 more)
(+267 files in other folders)
