[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strmquiz"
version = "0.1.0"
description = "STRM test generator for Structure Machine courses"
authors = [
    { name = "Taha Zerrouki", email = "taha.zerrouki@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    # أضف التبعيات هنا إن وجدت
]

[project.scripts]
strmquiz = "strmquiz.__main__:main"

[tool.setuptools]
packages = { find = { where = ["."] } }
