[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strmquiz"
version = "0.1.0"
description = "STRM test generator for Structure Machine courses"
authors = [
    { name = "Taha Zerrouki", email = "taha.zerrouki@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
 "tabulate",
    "sympy=1.7.1",
"moodlexport>=0.0.29",
"jinja2>=3.1.6",
"deprecated",
]

[project.scripts]
strmquiz = "strmquiz.__main__:main"

[tool.setuptools]
packages = { find = { where = ["."] } }
